--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,24 +1,37 @@
-<footer class="container">
-  <div class="row">
-    <div class="col-sm">
-      <p>
-        @ Bản quyền thuộc
-        <a href="" class="text-decoration-none">Group 9 WD17309</a>
+<footer class="w-full text-gray-600 bg-gray-100 py-7">
+  <div
+    class="grid md:grid-cols-3 md:gap-4 max-w-[1440px] m-auto justify-around"
+  >
+    <div class="col-span-1">
+      <p class="text-sm font-medium">
+        @ Copyright © 2023
+        <a href="" class="text-decoration-none hover:underline"
+          >Group 9 WD17309</a
+        >, Inc.
       </p>
     </div>
-    <div class="col-sm d-flex gap-3">
+    <div
+      class="col-span-2 md:flex max-md:flex max-md:flex-wrap text-sm font-medium md:justify-end"
+    >
       <div>
-        <a href="" class="text-decoration-none text-dark"
-          >Chính sách & Điều khoản</a
-        >
+        <a href="">Địa chỉ chúng tôi <span class="px-2">&#8226;</span></a>
       </div>
       <div>
-        <a href="" class="text-decoration-none text-dark">Câu hỏi thường gặp</a>
+        <a href="">Điều khoản & Chính sách <span class="px-2">&#8226;</span></a>
       </div>
-      <div class="d-flex gap-2 flex-row-reverse">
-        <a href=""><i class="bi bi-github" style="color: black"></i></a>
-        <a href=""><i class="bi bi-wechat" style="color: black"></i></a>
-        <a href=""><i class="bi bi-facebook" style="color: black"></i></a>
+      <div>
+        <a href="">Giấy phép kinh doanh <span class="px-2">&#8226;</span></a>
+      </div>
+      <div>
+        <a href="">Đội ngũ hỗ trợ</a>
+      </div>
+      <div class="flex items-center gap-2 px-4">
+        <img
+          src="https://cdn-icons-png.flaticon.com/512/555/555515.png"
+          alt=""
+          width="25px"
+        />
+        <span class="font-semibold text-sm">(VNĐ)</span>
       </div>
     </div>
   </div>
