Code phần slide ở Banner + Trang not Found 404

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -4,7 +4,7 @@
   >
     <!-- Logo -->
     <div class="flex-shrink-0">
-      <a href="#">
+      <a routerLink="/product">
         <img
           width="130px"
           height="100px"
@@ -21,22 +21,22 @@
         class="grid-rows-1 flex max-lg:w-full max-lg:flex-col max-lg:text-center"
       >
         <a
-          href="#"
+          routerLink="/"
           class="text-gray-800 hover:text-gray-700 font-medium px-3 py-2"
           >Trang chủ</a
         >
         <a
-          href="/product"
+          routerLink="/product"
           class="text-gray-500 hover:text-gray-600 font-medium px-3 py-2"
           >Sản phẩm</a
         >
         <a
-          href="#"
+          routerLink="/about"
           class="text-gray-500 hover:text-gray-600 font-medium px-3 py-2"
           >Giới thiệu</a
         >
         <a
-          href="#"
+          routerLink="/contact"
           class="text-gray-500 hover:text-gray-600 font-medium px-3 py-2"
           >Liên hệ</a
         >
@@ -53,7 +53,7 @@
           <i class="fas fa-shopping-cart"></i>
         </button>
         <a
-          href="#"
+          routerLink="/auth"
           class="text-gray-600 hover:text-gray-600 font-medium px-3 py-2"
         >
           <i class="fas fa-user"></i>
