--- a/src/app/components/banner/banner.component.css
+++ b/src/app/components/banner/banner.component.css
@@ -24,8 +24,8 @@
   background-color: black;
   opacity: 0.3;
 }
-.card-banner:hover > button {
-  z-index: 10;
-  opacity: 1;
+.card-banner:hover button {
+  z-index: 10 !important;
+  opacity: 1 !important;
   box-shadow: rgb(252 253 254 / 60%) 0px 8px 24px;
 }
