--- a/src/app/components/banner/banner.component.css
+++ b/src/app/components/banner/banner.component.css
@@ -3,7 +3,7 @@
 @import "swiper/less/pagination"; */
 @import "swiper/css";
 /* @import "swiper/css/navigation"; */
-@import "swiper/css/pagination";
+/* @import "swiper/css/pagination"; */
 /* @import "swiper/css/scrollbar"; */
 
 .card-banner {
