add cdn swiper css

--- a/src/app/components/banner/banner.component.css
+++ b/src/app/components/banner/banner.component.css
@@ -1,7 +1,7 @@
 /* @import "swiper/less";
 @import "swiper/less/navigation";
 @import "swiper/less/pagination"; */
-@import "swiper/css";
+/* @import "swiper/css"; */
 /* @import "swiper/css/navigation"; */
 /* @import "swiper/css/pagination"; */
 /* @import "swiper/css/scrollbar"; */
