--- a/src/app/pages/not-found/not-found.component.html
+++ b/src/app/pages/not-found/not-found.component.html
@@ -1,5 +1,5 @@
 <section
-  class="flex items-center h-full p-16 dark:bg-gray-900 dark:text-gray-100"
+  class="flex items-center h-full p-16 dark:bg-gray-900 dark:text-gray-100 min-h-[84vh]"
 >
   <div
     class="container flex flex-col items-center justify-center px-5 mx-auto my-8"
