homepage/scrolltop/product page css fix

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,22 @@
 <app-header></app-header>
 <router-outlet></router-outlet>
 <app-footer></app-footer>
+<button
+  class="z-99 btn rounded-full w-[60px] h-[60px] text-white bg-black fixed bottom-5 right-5"
+  (click)="scrollToTop()"
+>
+  <svg
+    xmlns="http://www.w3.org/2000/svg"
+    fill="none"
+    viewBox="0 0 24 24"
+    stroke-width="1.5"
+    stroke="currentColor"
+    class="w-8 h-8 mx-auto"
+  >
+    <path
+      stroke-linecap="round"
+      stroke-linejoin="round"
+      d="M4.5 15.75l7.5-7.5 7.5 7.5"
+    />
+  </svg>
+</button>
