--- a/src/app/pages/product/list-product/list-product.component.html
+++ b/src/app/pages/product/list-product/list-product.component.html
@@ -1,7 +1,7 @@
 <section id="c-search" class="container mx-auto my-6">
   <div class="grid grid-cols-4 gap-8">
     <div class="">
-      <h3 class="font-bold">Tìm kiếm sản phẩm</h3>
+      <h3 class="font-bold mt-8">Tìm kiếm sản phẩm</h3>
       <form action="">
         <input
           class="border py-2 pl-2 my-3 focus:outline-none mr-2"
@@ -9,7 +9,7 @@
           placeholder="Nhập tên"
         />
         <button
-          class="bg-[#1D4ED8] text-white py-2 px-4 rounded-md hover:bg-blue-800 my-3 font-medium"
+          class="bg-black text-white py-2 px-4 hover:bg-white hover:text-black hover:border my-3 font-medium"
         >
           Tìm kiếm
         </button>
@@ -149,9 +149,9 @@
           </div>
         </div>
       </div>
-      <div class="grid grid-cols-3 gap-8">
+      <!-- <div class="grid grid-cols-3 gap-8">
         <p>Không tìm thấy sản phẩm nào phù hợp!!!</p>
-      </div>
+      </div> -->
     </div>
   </div>
 </section>
