--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
-<div class="w-full bg-gray-100">
+<div class="w-full bg-gray-100 sticky top-0 z-10">
   <header
-    class="max-w-[1440px] m-auto grid grid-flow-col justify-between items-center auto-cols-max py-4 px-6"
+    class="max-w-[1440px] m-auto grid grid-flow-col justify-between items-center auto-cols-max py-3 px-6"
   >
     <!-- Logo -->
     <div class="flex-shrink-0">
