--- a/src/app/components/products-famous/products-famous.component.html
+++ b/src/app/components/products-famous/products-famous.component.html
@@ -1,5 +1,5 @@
 <section class="container py-8 mx-auto">
-  <h2 class="font-bold text-3xl my-6 text-center">Sản phẩm mới</h2>
+  <h2 class="font-bold text-3xl my-6 text-center">Sản phẩm nổi bật</h2>
   <div class="grid grid-cols-5 gap-8">
     <div
       *ngFor="let item of products"
@@ -88,9 +88,9 @@
                 ></path>
               </svg>
               <!-- <span
-              class="bg-blue-100 text-blue-800 text-xs font-semibold mr-2 px-2.5 py-0.5 rounded dark:bg-blue-200 dark:text-blue-800 ml-3"
-              >5.0</span
-            > -->
+                class="bg-blue-100 text-blue-800 text-xs font-semibold mr-2 px-2.5 py-0.5 rounded dark:bg-blue-200 dark:text-blue-800 ml-3"
+                >5.0</span
+              > -->
             </div>
           </div>
         </div>
