--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,6 @@
 <app-banner></app-banner>
+<app-products-new></app-products-new>
+<app-collections></app-collections>
+<app-products-famous></app-products-famous>
 <!-- 
 <app-cart></app-cart> -->
