Router BlankLayout + Page Checkout Success

--- a/src/app/pages/auth/auth.component.html
+++ b/src/app/pages/auth/auth.component.html
@@ -296,6 +296,11 @@
             {{ isMatch ? "Đăng nhập" : "Đăng ký ngay" }}
           </button>
         </p>
+        <div class="w-full text-right py-4">
+          <a routerLink="/" class="font-semibold text-sm"
+            ><i class="fas fa-home mr-1"></i>Quay lại Website</a
+          >
+        </div>
       </div>
     </div>
   </div>
