--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-header></app-header>
+<!-- <app-header></app-header>
 <router-outlet></router-outlet>
 <app-footer></app-footer>
 <button
@@ -19,4 +19,5 @@
       d="M4.5 15.75l7.5-7.5 7.5 7.5"
     />
   </svg>
-</button>
+</button> -->
+<router-outlet></router-outlet>
