add paginate/add addtocart button on card product/checkout page

--- a/src/app/pages/client/product/list-product/list-product.component.html
+++ b/src/app/pages/client/product/list-product/list-product.component.html
@@ -57,7 +57,7 @@
 
       <div>
         <div class="text-center w-full" aria-label="Page navigation example">
-          <ul class="block inline-flex items-center -space-x-px">
+          <ul class="inline-flex items-center -space-x-px">
             <li>
               <a
                 href="#"
