Cập nhật footer

--- a/src/app/components/client/footer/footer.component.html
+++ b/src/app/components/client/footer/footer.component.html
@@ -1,30 +1,74 @@
 <footer class="w-full text-gray-600 bg-gray-100 py-7">
-  <div
-    class="grid md:grid-cols-3 md:gap-4 max-w-[1440px] m-auto justify-around"
-  >
-    <div class="col-span-1">
+  <div class="max-w-[1440px] m-auto grid grid-cols-4 gap-4 pb-4">
+    <div>
+      <h4 class="font-medium text-lg mb-2">Giới thiệu</h4>
+      <p>
+        FSTORE ra đời để tạo ra một quy chuẩn mới về chất lượng và sự phù hợp để
+        nâng tầm streetwear Việt Nam
+      </p>
+      <div class="py-4">
+        <img
+          src="https://file.hstatic.net/1000300454/file/logo_bct_019590229b4c4dfda690236b67f7aff4.png"
+          alt=""
+          width="120px"
+        />
+      </div>
+    </div>
+    <div>
+      <h4 class="font-medium text-lg mb-2">Liên kết</h4>
+      <div><a routerLink="">Tìm kiếm</a></div>
+      <div>
+        <a routerLink="">Giới thiệu</a>
+      </div>
+      <div>
+        <a routerLink="">Chính sách đổi trả</a>
+      </div>
+      <div>
+        <a routerLink="">Chính sách bảo mật & Điều khoản</a>
+      </div>
+    </div>
+    <div>
+      <h4 class="font-medium text-lg mb-2">Thông tin liên hệ</h4>
+      <div>
+        <div>
+          <i class="fa-solid fa-location-dot w-6"></i
+          ><a routerLink=""
+            >19 ngõ 59 Lê Đức Thọ , Mỹ Đình 2, Nam Từ Liêm, Hà Nội</a
+          >
+        </div>
+        <div>
+          <i class="fa-solid fa-phone w-6"></i><a routerLink="">086.907.6265</a>
+        </div>
+        <div>
+          <i class="fa-solid fa-phone w-6"></i><a routerLink="">098.889.9989</a>
+        </div>
+        <div>
+          <i class="fa-regular fa-paper-plane w-6"></i
+          ><a routerLink="">fstore@gmail.com</a>
+        </div>
+      </div>
+    </div>
+    <div>
+      <h4 class="font-medium text-lg mb-2">Địa chỉ chúng tôi</h4>
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3723.863856015896!2d105.74421217591062!3d21.038132787455297!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x313454b991d80fd5%3A0x53cefc99d6b0bf6f!2zVHLGsOG7nW5nIENhbyDEkeG6s25nIEZQVCBQb2x5dGVjaG5pYw!5e0!3m2!1svi!2s!4v1684576948202!5m2!1svi!2s"
+        width="100%"
+        style="border: 0"
+        allowfullscreen=""
+        loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"
+      ></iframe>
+    </div>
+  </div>
+  <div class="max-w-[1440px] m-auto text-center">
+    <hr />
+    <div class="py-5 uppercase">
       <p class="text-sm font-medium">
         @ Copyright © 2023
         <a href="" class="text-decoration-none hover:underline"
           >Group 9 WD17309</a
         >, Inc.
       </p>
-    </div>
-    <div
-      class="col-span-2 md:flex max-md:flex max-md:flex-wrap text-sm font-medium md:justify-end"
-    >
-      <div>
-        <a href="">Địa chỉ chúng tôi <span class="px-2">&#8226;</span></a>
-      </div>
-      <div>
-        <a href="">Điều khoản & Chính sách <span class="px-2">&#8226;</span></a>
-      </div>
-      <div>
-        <a href="">Giấy phép kinh doanh <span class="px-2">&#8226;</span></a>
-      </div>
-      <div>
-        <a href="">Đội ngũ hỗ trợ</a>
-      </div>
     </div>
   </div>
 </footer>
