--- a/src/app/pages/client/product/details-product/details-product.component.html
+++ b/src/app/pages/client/product/details-product/details-product.component.html
@@ -51,9 +51,44 @@
       <form action="" method="post">
         <!-- Size -->
         <h4 class="font-semibold text-xl py-3">Kích thức</h4>
-        <div class="flex gap-3">
-          <div
+        <div
+          *ngIf="product.size != undefined || product.size != ''"
+          class="flex gap-3"
+        >
+          <div *ngFor="let item of product.size">
+            <div
+              *ngIf="activeSize !== item"
+              class="relative w-10 h-10 border border-gray-300 cursor-pointer sizeHover z-10"
+              data-id="{{ item }}"
+              (click)="onHanddleSize($event)"
+            >
+              <p
+                class="absolute left-[50%] top-[50%] text-[12px] text-black z-[1]"
+                style="transform: translate(-50%, -50%)"
+                data-id="{{ item }}"
+              >
+                {{ item }}
+              </p>
+            </div>
+            <div
+              *ngIf="activeSize == item"
+              class="relative w-10 h-10 border border-gray-300 cursor-pointer sizeHover z-10 active"
+              data-id="{{ item }}"
+              (click)="onHanddleSize($event)"
+            >
+              <p
+                class="absolute left-[50%] top-[50%] text-[12px] text-black z-[1]"
+                style="transform: translate(-50%, -50%)"
+                data-id="{{ item }}"
+              >
+                {{ item }}
+              </p>
+            </div>
+          </div>
+
+          <!-- <div
             class="relative w-10 h-10 border bg-black border-gray-300 cursor-pointer"
+            (click)="onHanddleSize()"
           >
             <p
               class="absolute left-[50%] top-[50%] text-[12px] text-white"
@@ -87,7 +122,7 @@
             >
               32
             </p>
-          </div>
+          </div> -->
         </div>
         <hr class="my-4" />
         <!-- Quantity -->
@@ -97,8 +132,8 @@
               id="price_btn"
               type="button"
               class="button-decrement"
-              onclick="setNumber(event)"
               data-input-id="hue"
+              (click)="_setValueQuantity()"
               data-operation="decrement"
             ></button>
             <div class="number-input">
@@ -108,18 +143,18 @@
                 name="hue"
                 class="number-input-text-box"
                 value="1"
+                [(ngModel)]="inputValuee"
+                (change)="inputValue()"
                 min="0"
                 max="100"
-                oninput="handleNumberInput()"
-                onblur="handleNumberInputBlur(event)"
                 data-step="1"
               />
             </div>
             <button
               id="price_btn"
               type="button"
+              (click)="setValueQuantity()"
               class="button-increment"
-              onclick="setNumber(event)"
               data-input-id="hue"
               data-operation="increment"
             ></button>
@@ -127,6 +162,7 @@
         </div>
         <button
           class="uppercase bg-black text-white my-5 py-4 font-semibold text-[13px] block w-full"
+          (click)="onHanddleOrder()"
         >
           Thêm vào giỏ
         </button>
