--- a/src/app/components/client/card/card.component.html
+++ b/src/app/components/client/card/card.component.html
@@ -34,7 +34,7 @@
     <i
       class="addtocart absolute text-3xl top-4 right-4 fa-solid fa-cart-plus cursor-pointer"
     ></i>
-    <a class="w-full" routerLink="/product/{{ item.id }}">
+    <a class="w-full" routerLink="/product/{{ item._id }}">
       <img
         class=""
         src="https://product.hstatic.net/200000307615/product/7__2__31af12cab2374c02b2df8c3fe98ce9b6_master.jpg"
@@ -42,7 +42,7 @@
       />
     </a>
     <div class="pb-5 my-2">
-      <a routerLink="/product/{{ item.id }}">
+      <a routerLink="/product/{{ item._id }}">
         <h5
           class="tracking-tight dark:text-white line-clamp-2 hover:text-[#618C2F] uppercase"
         >
